third_party/move/move-compiler-v2/tests/folding/constants_string_non_utf8.exp

Diagnostics:
error: invalid character
  ┌─ tests/folding/constants_string_non_utf8.move:5:31
  │
5 │     const C12: vector<u8> = b"ÿ";
  │                               ^ Invalid character: `ÿ`
